fixed letter spacing

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -52,7 +52,7 @@ footer {
       opacity:.07;
   
       @media screen and (max-width:v.$smallScreen) {
-        transform: scale(1.25);
+        transform: scale(1.23);
       }
 
       @media screen and (max-width:360px) {
