--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -24,7 +24,7 @@
       @media screen and (max-width:v.$smallScreen) {
         font-size:3.2rem;
         left:-7%;
-        letter-spacing: 5px;
+        letter-spacing: 4px;
       }
 
       @media screen and (max-width:320px) {
